Closed Bug 1294463 Opened 9 years ago Closed 9 years ago

dom/system/gonk/AudioManager.cpp:599:62: error: 'RootingCx' is not a member of 'nsContentUtils'

Categories

(Firefox OS Graveyard :: GonkIntegration, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(firefox51 fixed)

RESOLVED FIXED
Tracking Status
firefox51 --- fixed

People

(Reporter: gerard-majax, Assigned: gerard-majax)

References

Details

Attachments

(1 file)

Assignee: nobody → lissyx+mozillians
Comment on attachment 8780143 [details] Bug 1294463 - Followup 1292892, remove nsContentUtils::RootingCx() Sorry for breaking this, but danger::GetJSContext() is not the right fix. This should use mozilla::dom::RootingCx() instead.
Attachment #8780143 - Flags: review-
Yep, I just realized that when hitting the push to try button, messed up with tabs :)
Comment on attachment 8780143 [details] Bug 1294463 - Followup 1292892, remove nsContentUtils::RootingCx() https://reviewboard.mozilla.org/r/70924/#review68394 Thanks!
Attachment #8780143 - Flags: review?(jdemooij) → review+
Pushed by alissy@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/eb27f7675ebc Followup 1292892, remove nsContentUtils::RootingCx() r=jandem
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: