Bug 1294463 - Followup 1292892, remove nsContentUtils::RootingCx() r=jandem

MozReview-Commit-ID: 8p8rDw8tG3l